welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: not found: value length
  for (i<-1 to length.nums-1) {
               ^