welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
var k = 0
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  for (i<-1 to length.nums-1) {
    if (nums(i)==lookingFor)
    	k=k+1
  }
  return k
}